<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.AddNewAddress">

        <include
            android:id="@+id/headlyaout"
            layout="@layout/header_layout"/>

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/x_meadium_txtView"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:text="@string/personal_details"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:id="@+id/firstNameLayout"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/nameEt"
                                style="@style/x_small_EditText"
                                android:gravity="start"
                                android:hint="@string/name" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:id="@+id/contactLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:inputType="number"
                            android:id="@+id/contactEt"
                            style="@style/x_small_EditText"
                            android:gravity="start"
                            android:hint="@string/contact_number_to_say_hello" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:textSize="17sp"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/x_meadium_txtView"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:text="@string/address_details"/>
                    <LinearLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:id="@+id/houseLayout"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/houseNoEt"
                                style="@style/x_small_EditText"
                                android:gravity="start"
                                android:hint="@string/flat_house_office_no" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:id="@+id/streetdetailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/streetdetailEt"
                            style="@style/x_small_EditText"
                            android:gravity="start"
                            android:hint="@string/street_society_office_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:id="@+id/landmarkLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/areaLocalityEt"
                            style="@style/x_small_EditText"
                            android:gravity="start"
                            android:hint="Area/Locality" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- City and Country Selector -->

                    <RelativeLayout
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:drawableStart="@drawable/ic_location_on_black_24dp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_toStartOf="@+id/myLocation"
                            android:drawableTint="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_address_sign"
                            android:textSize="13sp"
                            android:maxLines="2"
                            android:hint="@string/choose_current_location" />
                        <ImageView
                            android:id="@+id/myLocation"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:tint="@color/colorPrimaryDark"
                            android:src="@drawable/ic_my_location"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"/>
                    </RelativeLayout>

                    <View
                        android:visibility="gone"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"/>


                    <LinearLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginStart="@dimen/_3sdp"
                                style="@style/x_small_txtView"
                                android:textColor="@color/gray"
                                android:gravity="start"
                                android:text="@string/state"/>
                            <EditText
                                android:enabled="false"
                                android:id="@+id/stateEt"
                                style="@style/x_small_EditText"
                                android:gravity="start"
                                android:hint="Area/Locality" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginStart="@dimen/_3sdp"
                                style="@style/x_small_txtView"
                                android:textColor="@color/gray"
                                android:gravity="start"
                                android:text="@string/city"/>
                            <EditText
                                android:enabled="false"
                                android:id="@+id/cityEt"
                                style="@style/x_small_EditText"
                                android:gravity="start"
                                android:hint="Area/Locality" />
                        </LinearLayout>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:id="@+id/pincodeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:enabled="false"
                            android:id="@+id/pincodeEt"
                            style="@style/x_small_EditText"
                            android:gravity="start"
                            android:hint="@string/pincode" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        style="@style/x_meadium_txtView"
                        android:gravity="start"
                        android:textColor="@color/gray"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/choose_nick_name_for_this_address"/>

                    <LinearLayout
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/homeBtn"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:text="@string/home"
                            style="@style/button_light_radius_grey"/>
                        <Button
                            android:id="@+id/officeBtn"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_width="wrap_content"
                            android:text="@string/office"
                            style="@style/button_light_radius_grey"/>
                        <Button
                            android:id="@+id/otherBtn"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_width="wrap_content"
                            android:text="@string/other"
                            style="@style/button_light_radius_grey"/>
                    </LinearLayout>


                    <View
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                    <CheckBox
                        android:visibility="gone"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/set_this_as_my_default_delivery_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/AddBtn"
                    android:layout_alignParentBottom="true"
                    style="@style/textViewBtn"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/add_address"/>
            </RelativeLayout>

        </ScrollView>
    </LinearLayout>
</layout>